# rshx

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  features.txt  listing.txt  main.py  names.txt  pyproject.toml  requirements-dev.txt  requirements.txt  status.txt  update_docs.py  whoami.txt
docs/: configuration_guide.md  plugin_guide.md  scripting_guide.md  testing_guide.md
rshx/: __init__.py  __main__.py
rshx/commands/: builtins.py
rshx/core/: alias_manager.py  ast.py  command_queue.py  completer.py  config.py  confirmation.py  environment.py  executor.py  history.py  input_dispatcher.py  parser.py  pipeline.py  plugin_api.py  plugin_loader.py  plugin_manager.py  plugin_registry.py  preprocessor.py  process.py  prompt.py  prompt_config.py  redirect.py  repl.py  script_loader.py  script_parser.py  script_runtime.py  script_types.py  theme.py
rshx/plugins/hello/: manifest.toml  plugin.py
rshx/scripts/: continuetest.rshx  greet.rshx  hello.rshx  project_check.rshx  release_check.rshx  stoptest.rshx  vartest.rshx
rshx/utils/: display.py
tests/: test_alias_manager.py  test_ast.py  test_ast_parser.py  test_builtins.py  test_builtins.py.bak  test_command_queue.py  test_completer.py  test_config.py  test_confirmation.py  test_coverage_gaps.py  test_display.py  test_edge_cases.py  test_environment.py  test_executor.py  test_executor_plugin.py  test_history.py  test_input_dispatcher.py  test_parser.py  test_pipeline.py  test_plugin_api.py  test_plugin_builtins.py  test_plugin_loader.py  test_plugin_manager.py  test_plugin_registry.py  test_preprocessor.py  test_process.py  test_prompt.py  test_prompt_config.py  test_redirect.py  test_repl.py  test_script_coverage.py  test_script_loader.py  test_script_parser.py  test_script_runtime.py  test_script_types.py  test_theme.py
(+2 files in other folders)
